--- a/practicum_2/practicum_2.ipynb
+++ b/practicum_2/practicum_2.ipynb
@@ -2077,13 +2077,10 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2b3714695f2307aafe7da52bf6e53e38bc5469a267534973be7d21c816457eaf"
-  },
   "kernelspec": {
-   "display_name": "ml_2025",
+   "display_name": "base",
    "language": "python",
-   "name": "ml_2025"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2095,7 +2092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
