--- a/practicum_1/practicum_1.ipynb
+++ b/practicum_1/practicum_1.ipynb
@@ -3092,11 +3092,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2b3714695f2307aafe7da52bf6e53e38bc5469a267534973be7d21c816457eaf"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3110,7 +3107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
